[gd_scene load_steps=33 format=3 uid="uid://b3hw1a0b73u4j"]

[ext_resource type="Script" path="res://nodes/stage/stage.gd" id="1_2obi2"]
[ext_resource type="Resource" uid="uid://nqd76c0wsme" path="res://resources/items/world/dishes/plates/DISH_CRUDE_PLATE.tres" id="2_ady1r"]
[ext_resource type="Script" path="res://resources/items/item_components/food_preparer.gd" id="2_bhpth"]
[ext_resource type="PackedScene" uid="uid://cdtv1rwt2vl2b" path="res://nodes/stage/stage_interface.tscn" id="2_g73d1"]
[ext_resource type="Script" path="res://resources/stage_inventory/stage_inventory.gd" id="2_kne2o"]
[ext_resource type="Script" path="res://resources/items/item_components/item_component.gd" id="2_utj3e"]
[ext_resource type="Script" path="res://resources/items/stage_item.gd" id="3_fkp4m"]
[ext_resource type="Resource" uid="uid://ctn0rrkndttko" path="res://resources/items/world/ingredients/noodles/FING_N_MACARONI.tres" id="3_ok8qn"]
[ext_resource type="Script" path="res://resources/items/world_item.gd" id="4_fdwq0"]
[ext_resource type="Texture2D" uid="uid://ceud3opo1yfkv" path="res://resources/images/textures/prototype/PNG/Dark/texture_01.png" id="4_j55o2"]
[ext_resource type="Resource" uid="uid://b8p6so4qq32re" path="res://resources/items/world/ingredients/protein/FING_P_BACON.tres" id="4_qll8s"]
[ext_resource type="Resource" uid="uid://dg0c20a4ol705" path="res://resources/items/world/ingredients/spices/FING_S_PEPPERJACK-CHEESE.tres" id="5_fmn6o"]
[ext_resource type="Resource" uid="uid://dsiu7oqfa3rwl" path="res://resources/items/world/dishes/bowls/DISH_CRUDE_BOWL.tres" id="8_saw44"]
[ext_resource type="Resource" uid="uid://c0wmqtsjepeuc" path="res://resources/items/world/dishes/teacups/DISH_CRUDE_TEACUP.tres" id="8_xne1s"]
[ext_resource type="Resource" uid="uid://gmhytqq03om3" path="res://resources/items/world/ingredients/leaves/FING_LE_CHAMOMILE.tres" id="9_3pe1r"]
[ext_resource type="Script" path="res://nodes/acts/array_acts_manager.gd" id="9_6pw1b"]
[ext_resource type="Resource" uid="uid://c53ofmkk1t465" path="res://resources/items/world/ingredients/liquids/FING_L_DARKENED-ROUX.tres" id="9_xi54x"]
[ext_resource type="Resource" uid="uid://lh7ayqmhgqi8" path="res://resources/items/world/ingredients/protein/FING_P_CHICKEN.tres" id="10_ih8q3"]
[ext_resource type="Resource" uid="uid://chv78adu1jccf" path="res://resources/items/world/ingredients/liquids/FING_L_WATER.tres" id="10_mmfct"]
[ext_resource type="Resource" uid="uid://m2pl2ofv3q22" path="res://resources/items/world/ingredients/sugars/FING_S_RAW_CANE_SUGAR.tres" id="11_3krs5"]
[ext_resource type="Resource" uid="uid://b1qe2vlwxbc6t" path="res://resources/items/world/ingredients/vegetables/FING_V_HOLY-TRINITY.tres" id="11_jg4jo"]

[sub_resource type="Resource" id="Resource_f5kxh"]
script = ExtResource("2_bhpth")
_dish = ExtResource("2_ady1r")
_ingredients = Array[ExtResource("4_fdwq0")]([ExtResource("3_ok8qn"), ExtResource("4_qll8s"), ExtResource("5_fmn6o")])

[sub_resource type="Resource" id="Resource_ykdir"]
script = ExtResource("3_fkp4m")
_item_name = ""
_item_description = ""
_consumable = true
_friendly_fire = true
_use_type = 0
_item_components = Array[ExtResource("2_utj3e")]([SubResource("Resource_f5kxh")])

[sub_resource type="Resource" id="Resource_bg0gi"]
script = ExtResource("2_bhpth")
_dish = ExtResource("8_xne1s")
_ingredients = Array[ExtResource("4_fdwq0")]([ExtResource("9_3pe1r"), ExtResource("10_mmfct"), ExtResource("11_3krs5")])

[sub_resource type="Resource" id="Resource_wo1gr"]
script = ExtResource("3_fkp4m")
_item_name = ""
_item_description = ""
_consumable = true
_friendly_fire = true
_use_type = 0
_item_components = Array[ExtResource("2_utj3e")]([SubResource("Resource_bg0gi")])

[sub_resource type="Resource" id="Resource_b35da"]
script = ExtResource("2_bhpth")
_dish = ExtResource("8_saw44")
_ingredients = Array[ExtResource("4_fdwq0")]([ExtResource("9_xi54x"), ExtResource("10_ih8q3"), ExtResource("11_jg4jo")])

[sub_resource type="Resource" id="Resource_dqhfy"]
script = ExtResource("3_fkp4m")
_item_name = ""
_item_description = ""
_consumable = true
_friendly_fire = true
_use_type = 0
_item_components = Array[ExtResource("2_utj3e")]([SubResource("Resource_b35da")])

[sub_resource type="Resource" id="Resource_mndya"]
script = ExtResource("2_kne2o")
_starting_items = [SubResource("Resource_ykdir"), SubResource("Resource_wo1gr"), SubResource("Resource_dqhfy")]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_utxbh"]

[sub_resource type="Sky" id="Sky_cprll"]
sky_material = SubResource("ProceduralSkyMaterial_utxbh")

[sub_resource type="Environment" id="Environment_mt05j"]
background_mode = 2
sky = SubResource("Sky_cprll")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5jjj8"]
albedo_texture = ExtResource("4_j55o2")

[node name="Stage" type="Node3D"]
script = ExtResource("1_2obi2")
_starting_stage_inventory = SubResource("Resource_mndya")

[node name="ArrayActsManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_6pw1b")

[node name="StageInterface" parent="." instance=ExtResource("2_g73d1")]
unique_name_in_owner = true

[node name="StageCamera3D" type="Camera3D" parent="."]
current = true

[node name="ReadyCamera3D" type="Camera3D" parent="."]
transform = Transform3D(0.927739, -0.180427, 0.326721, 0.185938, 0.982454, 0.0145668, -0.323616, 0.0472356, 0.945009, 1.93238, 1.30144, 6.95066)

[node name="AttackCamera3D" type="Camera3D" parent="."]
transform = Transform3D(0.917755, 0.0634965, 0.392039, 0, 0.987136, -0.159881, -0.397148, 0.146732, 0.905949, 2.168, 0.768, -1.454)

[node name="DefendCamera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.917872, -0.0634871, -0.391765, -3.09789e-10, 0.987122, -0.159967, 0.396876, -0.14683, -0.906052, -2.16773, 0.767632, 1.4536)

[node name="POIs" type="Node" parent="."]

[node name="PartyMember" type="Node" parent="POIs"]

[node name="ReadyActorPosition" type="Marker3D" parent="POIs/PartyMember"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)

[node name="NextReadyActorPosition" type="Marker3D" parent="POIs/PartyMember"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 4.5)

[node name="LastReadyActorPosition" type="Marker3D" parent="POIs/PartyMember"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 4.5)

[node name="Enemy" type="Node" parent="POIs"]

[node name="EnemySpawnPoint1" type="Marker3D" parent="POIs/Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0379322, 0, -3.28709)

[node name="EnemySpawnPoint2" type="Marker3D" parent="POIs/Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.82347, 0, -4.42025)

[node name="EnemySpawnPoint3" type="Marker3D" parent="POIs/Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.03346, 0, -5.76756)

[node name="Actors" type="Node" parent="."]
unique_name_in_owner = true

[node name="Environment" type="Node3D" parent="."]
metadata/_edit_lock_ = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_mt05j")

[node name="CSGBox3D" type="CSGBox3D" parent="Environment"]
transform = Transform3D(124.965, 0, 0, 0, 1, 0, 0, 0, 124.965, 0, -0.5, 0)
material = SubResource("StandardMaterial3D_5jjj8")
